fixed blurry image

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,11 @@
 .hero {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
     height: 12.5em;
     background: #e1e1e1;
     margin: -1em -2.5em 1em;
-    font-size: 2em
+    font-size: 2em;
+    height: 61.8vh;
+    max-height: 400px;
+    border-radius: 0;
   }
 
 .site-layout-content {
